Updates to make it work on Android

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,9 +22,10 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+
 android {
-    namespace "com.example.demo_html_editor_plus"
-    compileSdkVersion flutter.compileSdkVersion
+    namespace "ro.sistemecreative.demo_html_editor_plus"
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -42,11 +43,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.demo_html_editor_plus"
+        applicationId "ro.sistemecreative.demo_html_editor_plus"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 26
+        targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
