--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = demo_html_editor_plus
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.demoHtmlEditorPlus
+PRODUCT_BUNDLE_IDENTIFIER = ro.sistemcreative.demoHtmlEditorPlus
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 ro.sistemcreative. All rights reserved.
