--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "ro.sistemcreative" "\0"
             VALUE "FileDescription", "demo_html_editor_plus" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "demo_html_editor_plus" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 ro.sistemcreative. All rights reserved." "\0"
             VALUE "OriginalFilename", "demo_html_editor_plus.exe" "\0"
             VALUE "ProductName", "demo_html_editor_plus" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
