--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-.fvm
 .vscode
 android/local.properties
+
+# FVM Version Cache
+.fvm/
