--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,19 +28,23 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
+def flutterMinSdkVersion = 21
+def flutterTargetSdkVersion = 36
+
 
 android {
     namespace "ro.sistemecreative.demo_html_editor_plus"
-    compileSdkVersion 34
-    ndkVersion flutter.ndkVersion
+
+    compileSdkVersion flutterTargetSdkVersion.toInteger()
+    ndkVersion '29.0.14206865'
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
 
     sourceSets {
@@ -52,8 +56,8 @@ android {
         applicationId "ro.sistemecreative.demo_html_editor_plus"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 26
-        targetSdkVersion 33
+        minSdkVersion flutterMinSdkVersion.toInteger()
+        targetSdkVersion flutterTargetSdkVersion.toInteger()
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
